name:                ast-ex
version:             0.1.0.0
synopsis:            Interpreter for a toy ML-like language
description:         Please see README.md
homepage:            https://github.com/autotaker/ast-ex#readme
license:             BSD3
license-file:        LICENSE
author:              Taku Terao
maintainer:          autotaker@gmail.com
copyright:           2017 Taku Terao
category:            Compiler/Interpreter
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.ToyML.Syntax.Base
                     , Language.ToyML.Syntax.Parsed
                     , Language.ToyML.Syntax.Desugar
                     , Language.ToyML.Parser
                     , Language.ToyML.Eval
  build-depends:       base >= 4.9 && < 5
                     , parsec >= 3.1
                     , prettyclass >= 1.0
                     , containers >= 0.5.7
                     , mtl >= 2.2.1
  default-extensions:  GADTs, TypeFamilies, DataKinds
  default-language:    Haskell2010
  ghc-options:         -Wall

executable ast-ex-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , prettyclass 
                     , ast-ex
  default-language:    Haskell2010

test-suite ast-ex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ast-ex
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/autotaker/ast-ex
